--- a/Project37/Project37/Base.lproj/Main.storyboard
+++ b/Project37/Project37/Base.lproj/Main.storyboard
@@ -6,7 +6,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -14,10 +13,22 @@
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Project37" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                    <view key="view" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <view alpha="0.80000000000000004" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="n1v-Ht-edn" customClass="GradientView" customModule="Project37" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
+                                <color key="backgroundColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="topColor">
+                                        <color key="value" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="bottomColor">
+                                        <color key="value" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </view>
                             <view autoresizesSubviews="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GVK-y0-hBK">
                                 <rect key="frame" x="93.5" y="27.5" width="480" height="320"/>
                                 <constraints>
@@ -29,12 +40,16 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="GVK-y0-hBK" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="6mU-od-38w"/>
+                            <constraint firstItem="n1v-Ht-edn" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="GdD-9W-AwY"/>
+                            <constraint firstItem="n1v-Ht-edn" firstAttribute="bottom" secondItem="8bC-Xf-vdC" secondAttribute="bottom" id="JXT-D6-u4a"/>
                             <constraint firstItem="GVK-y0-hBK" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="WO2-rD-1bI"/>
+                            <constraint firstItem="n1v-Ht-edn" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="gxo-on-0Ad"/>
+                            <constraint firstItem="n1v-Ht-edn" firstAttribute="centerX" secondItem="GVK-y0-hBK" secondAttribute="centerX" id="kVs-KE-QJS"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="Uee-0j-aNJ"/>
                     </view>
                     <connections>
                         <outlet property="cardContainer" destination="GVK-y0-hBK" id="ZLz-7h-5Rb"/>
+                        <outlet property="gradientView" destination="n1v-Ht-edn" id="Wck-ym-EaO"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
